adjust spacing issues, increase font at mobile size, add footer

--- a/general.css
+++ b/general.css
@@ -41,7 +41,7 @@ body {
 .btn:visited {
   font-size: 20px;
   font-weight: 600;
-  background-color: #f2dfdf;
+  background-color: #f9d1d3;
   color: #444;
   text-decoration: none;
   /* display must be set to inline-block to add spacing styles */
@@ -67,7 +67,7 @@ body {
 .heading-secondary {
   font-size: 4.4rem;
   line-height: 1.2;
-  margin-bottom: 6.6rem;
+  margin-bottom: 4rem;
   margin-top: 9.6rem;
 }
 
@@ -82,4 +82,9 @@ body {
 #menus .text-content {
   font-size: 1.8rem;
   line-height: 1.4;
+}
+
+#hoursBanner,
+#reservations {
+  margin-top: 4.2rem;
 }
