--- a/queries.css
+++ b/queries.css
@@ -136,8 +136,14 @@
 
   .hours-flexbox {
     flex-direction: column;
-    height: auto;
+    min-height: fit-content;
+    margin-top: 6.4rem;
   }
+
+  #hoursBanner {
+    height: 96rem;
+  }
+
   #reservations .flex-div,
   #about .flex-div {
     flex-direction: column;
@@ -165,11 +171,11 @@
   #reservations .flex-div div p,
   #menus .flex-div div p,
   #about .flex-div div p {
-    font-size: 2rem;
+    font-size: 2.6rem;
   }
 
   .heading-secondary {
-    margin-bottom: 7.2rem;
+    margin-bottom: 3.2rem;
     margin-top: 7.2rem;
   }
 }
@@ -187,6 +193,7 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+    margin-bottom: 6.4rem;
     width: 100%;
     max-width: 36rem;
   }
@@ -204,25 +211,39 @@
   }
   .hero .hero-logo-box {
     margin: 0 auto;
-    margin-bottom: 3.6rem;
+    margin-bottom: 4.2rem;
   }
   .hero-logo-box img {
     max-width: 300px;
   }
   .hero .heading-primary {
     text-align: center;
-    transform: translateX(-5%);
+    /* transform: translateX(-5%); */
   }
 
   .hero-blurb p {
     text-align: center;
-    transform: translateX(-2%);
+    /* transform: translateX(-2%); */
   }
 
   .hero-btns-box {
-    transform: translateX(-2%);
+    /* transform: translateX(-2%); */
     display: flex;
     flex-direction: column;
+  }
+
+  p.comeDine {
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+
+  footer {
+    flex-direction: column;
+    gap: 1.2rem;
+  }
+
+  footer ul {
+    padding-left: 0;
   }
 }
 
